refactor：修改依赖注入方式、添加枚举类 - 将性别、演出分类、订单状态、支付记录字段改为枚举类型 - 将字段注入改为构造器注入 - 保持对外接口不变